--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Poorani",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
